tests/ui/ferrocene/compiler-arguments/target/target_not-available.rs
//~ ERROR [E0463]
//@ check-fail
//@ compile-flags: --target=x86_64-unknown-none
//@ needs-llvm-components: x86
fn main() {}

// ferrocene-annotations: um_rustc_target
